--- a/app/html/master/logged_in.html
+++ b/app/html/master/logged_in.html
@@ -30,6 +30,12 @@
 
     <script src="{{url_for('static', filename='/vendor/jquery/jquery-3.2.1.min.js')}}"></script>
 
+    <!-- <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator_bootstrap5.min.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator_midnight.min.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator_simple.min.css" rel="stylesheet"> -->
+    
+    <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
+
     {%include 'master/loading_spinner.html' %}
 
 </head>
@@ -39,7 +45,7 @@
     <nav class="navbar navbar-dark navbar-expand-md fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/static/images/dog_training_revolution.png" class="img-fluid" style="max-width: 300px;"
+                <img src="/static/images/dog_training_revolution.png" class="img-fluid" style="max-width: 200px;"
                     alt="Brand Image">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -80,6 +86,7 @@
                             Details</a>
                     </li>
                     {% endif %}
+                    <li class="nav-item"><a href="/logout" class="nav-link"><i class="fas fa-sign-out me-1"></i>Logout</a></li>
                 </ul>
             </div>
         </div>
