added changes to stripe to allow database api key

--- a/app/html/external/bookings.html
+++ b/app/html/external/bookings.html
@@ -11,7 +11,7 @@
 <div class="container pt-5">
     <div id="calendar" class="pt-5">
         <div id="eventModal" class="modal fade" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-dialog modal-lg modal-lg modal-dialog modal-lg-centered">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 id="eventTitle" class="modal-title">Add User & Pet</h5>
