--- a/app/html/home/home.html
+++ b/app/html/home/home.html
@@ -84,7 +84,8 @@
       </div>
       <div class="modal fade" id="{{product.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg modal-fullscreen-lg-down">
+        <div
+          class="modal-dialog modal-lg modal-dialog modal-lg-centered modal-dialog modal-lg-scrollable modal-lg modal-fullscreen-lg-down">
           <div class="modal-content">
             <div class="modal-header">
               <h1 class="modal-title fs-5" id="staticBackdropLabel">{{product.title}}</h1>
