--- a/app/html/admin/users.html
+++ b/app/html/admin/users.html
@@ -129,7 +129,7 @@
                         <div class="col-6">
                             <div class="form-outline mb-2">
                                 <label class="form-label" for="registerPhone">Phone Number</label>
-                                <input type="phone" id="registerPhone" class="form-control" required />
+                                <input type="phone" id="registerPhone" class="form-control" />
                             </div>
                         </div>
                     </div>
