--- a/app/html/home/home.html
+++ b/app/html/home/home.html
@@ -148,7 +148,7 @@
       {% for product in products%}
 
       <div class="col-md-6 col-lg-4 mb-4">
-        <div class="m-3 card h-100 shadow rounded-3" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url('{{product.image_url}}'); background-size: cover; background-position: center; background-repeat: unset;">
+        <div class="m-3 card h-100 shadow rounded-3" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url('{{product.image_base64}}'); background-size: cover; background-position: center; background-repeat: unset;">
 
           <div class="row p-3">
             <div class="col-12 text-center">
