--- a/app/html/admin/classes.html
+++ b/app/html/admin/classes.html
@@ -57,7 +57,7 @@
                     <div class="col-6">
                         <div class="form-outline mb-2">
                             <label for="editproductinstructor" class="form-label">Instructor</label>
-                            <select class="form-control" id="editproductinstructor" name="editproductinstructor"
+                            <select class="form-select" id="editproductinstructor" name="editproductinstructor"
                                 required>
                                 {% for instructor in instructors %}
                                 <option value="{{instructor.id}}">{{instructor.firstname}} {{instructor.surname}}
@@ -66,17 +66,16 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <!-- <div class="col-6">
                         <div id="editimagePreview" style="margin-top: 10px;">
                             <img id="editpreview" src="#" alt="Image Preview"
                                 style="display: none; max-width: 100%; height: auto; border: 1px solid #ddd; padding: 5px;" />
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-6">
                         <div class="form-outline mb-2">
-                            <label class="form-label" for="editproductImage">Upload Image</label>
-                            <input type="file" id="editproductImage" class="form-control form-control-sm"
-                                accept="image/*" onchange="editPreviewImage(event)" />
+                            <label class="form-label" for="editproductImage">Image location</label>
+                            <input type="text" id="editproductImage" class="form-control form-control-sm" />
                         </div>
                     </div>
                     <div class="col-6">
@@ -88,8 +87,8 @@
                     </div>
                     <div class="col-12">
                         <div class="mb-3">
-                            <label for="edittxtshortdesc" class="form-label">Short Description</label>
-                            <textarea class="form-control" id="edittxtshortdesc" rows="3"></textarea>
+                            <label for="edittxtshortdesc" class="form-label">Short Description <small>512 characters</small></label>
+                            <textarea class="form-control" id="edittxtshortdesc" rows="3" maxlength="512"></textarea>
                         </div>
                     </div>
                     <div class="col-12">
@@ -250,7 +249,7 @@
                         <div class="col-6">
                             <div class="form-outline mb-2">
                                 <label for="productinstructor" class="form-label">Instructor</label>
-                                <select class="form-control" id="productinstructor" name="productinstructor" required>
+                                <select class="form-select" id="productinstructor" name="productinstructor" required>
                                     {% for instructor in instructors %}
                                     <option value="{{instructor.id}}">{{instructor.firstname}} {{instructor.surname}}
                                     </option>
@@ -258,17 +257,16 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <!-- <div class="col-6">
                             <div id="imagePreview" style="margin-top: 10px;">
                                 <img id="preview" src="#" alt="Image Preview"
                                     style="display: none; max-width: 100%; height: auto; border: 1px solid #ddd; padding: 5px;" />
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-6">
                             <div class="form-outline mb-2">
-                                <label class="form-label" for="productImage">Upload Image</label>
-                                <input type="file" id="productImage" class="form-control form-control-sm"
-                                    accept="image/*" onchange="previewImage(event)" />
+                                <label class="form-label" for="productImage">Image Address</label>
+                                <input type="text" id="productImage" class="form-control form-control-sm" />
                             </div>
                         </div>
                         <div class="col-6">
@@ -280,8 +278,8 @@
                         </div>
                         <div class="col-12">
                             <div class="mb-3">
-                                <label for="addtxtshortdesc" class="form-label">Short Description</label>
-                                <textarea class="form-control" id="addtxtshortdesc" rows="3"></textarea>
+                                <label for="addtxtshortdesc" class="form-label">Short Description <small>512 characters</small></label>
+                                <textarea class="form-control" id="addtxtshortdesc" rows="3" maxlength="512"></textarea>
                             </div>
                         </div>
                         <div class="col-12">
@@ -449,7 +447,8 @@
             document.getElementById("edittxtfulldesc").value = product['full_desc'];
             document.getElementById("editproductlocation").value = product['location'];
             document.getElementById("editproductPrice").value = product['price'];
-
+            document.getElementById("editproductImage").value = product['image_base64'];
+            
             // Set the instructor select field
             document.getElementById("editproductinstructor").value = product['user_id'];
 
@@ -459,15 +458,15 @@
             // Set the recurrence pattern select field
             document.getElementById("editproductRecurrence").value = product['recurrence_pattern'];
 
-            // Image preview
-            var imagePreview = document.getElementById('editpreview');
-            if (product['image_base64']) {
-                imagePreview.style.display = 'block';
-                imagePreview.src = 'data:image/png;base64,' + product['image_base64'];
-            } else {
-                imagePreview.style.display = 'none';
-                imagePreview.src = '';
-            }
+            // // Image preview
+            // var imagePreview = document.getElementById('editpreview');
+            // if (product['image_base64']) {
+            //     imagePreview.style.display = 'block';
+            //     imagePreview.src = 'data:image/png;base64,' + product['image_base64'];
+            // } else {
+            //     imagePreview.style.display = 'none';
+            //     imagePreview.src = '';
+            // }
 
             // Recurrence days
             var recurrence_days = product['recurrence_days'];
@@ -550,15 +549,29 @@
         formData.append("productRecurEnd", document.getElementById("editproductRecurringend").value);
         formData.append("short_desc", document.getElementById("edittxtshortdesc").value);
         formData.append("full_desc", document.getElementById("edittxtfulldesc").value);
-        formData.append("productPrice", document.getElementById("editproductPrice").value);
+
+        // Check if productPrice is a number
+        if (!isNaN(document.getElementById("editproductPrice").value.trim) && document.getElementById("editproductPrice").value.trim() !== "") {
+            // If it's a number, append it to formData
+            formData.append("productPrice", document.getElementById("editproductPrice").value.trim);
+        } else {
+            // Handle the case where productPrice is not a number
+            formData.append("productPrice", 100);
+        }
+
         formData.append("productInstructor", document.getElementById("editproductinstructor").value);
         formData.append("productLocation", document.getElementById("editproductlocation").value);
+        formData.append("productImage", document.getElementById("editproductImage").value);
 
-        // Add image file if selected
-        var imageFile = document.getElementById("editproductImage").files[0];
-        if (imageFile) {
-            formData.append("productImage", imageFile);
-        }
+        // // Add image file if selected
+        // var imageFile = document.getElementById("editproductImage").files[0];
+        // if (imageFile) {
+        //     formData.append("productImage", imageFile);
+        // }
+
+        // sendDataUrl('/updatedproductdetails', JSON.stringify(data), function (response) {
+        //     location.reload();
+        // });
 
         fetch('/updatedproductdetails', {
             method: 'POST',
@@ -631,8 +644,14 @@
         formData.append("productinterval", document.getElementById("productInterval").value);
         formData.append("productRecurEnd", document.getElementById("productRecurringend").value);
 
-        // Add price
-        formData.append("productPrice", document.getElementById("productPrice").value);
+        // Check if productPrice is a number
+        if (!isNaN(document.getElementById("productPrice").value.trim) && document.getElementById("productPrice").value.trim() !== "") {
+            // If it's a number, append it to formData
+            formData.append("productPrice", document.getElementById("productPrice").value.trim);
+        } else {
+            // Handle the case where productPrice is not a number
+            formData.append("productPrice", 100);
+        }
 
         // Add instructor
         formData.append("productInstructor", document.getElementById("productinstructor").value);
@@ -643,12 +662,13 @@
         // Add short and full description
         formData.append("short_desc", document.getElementById("addtxtshortdesc").value);
         formData.append("full_desc", document.getElementById("addtxtfulldesc").value);
+        formData.append("productImage", document.getElementById("productImage").value);
 
-        // Add image file if selected
-        var imageFile = document.getElementById("productImage").files[0];
-        if (imageFile) {
-            formData.append("productImage", imageFile);
-        }
+        // // Add image file if selected
+        // var imageFile = document.getElementById("productImage").files[0];
+        // if (imageFile) {
+        //     formData.append("productImage", imageFile);
+        // }
 
         // Send data to the server
         fetch('/product_add', {
