--- a/app/html/home/home.html
+++ b/app/html/home/home.html
@@ -99,7 +99,8 @@
         <div class="row align-items-center h-100">
           <div class="col-12">
             <p class="bio-text">
-              <span class="float-end col-md-4 text-center">
+              
+              <span class="float-end col col-xs-12 col-sm-4 col-lg-12 text-center pb-5">
                 <img src="/static/images/rachel_trafford_dog_trainer.jpeg" alt="Rachel ABTC and IAABC-certified dog training professional" class="bio-image mb-3">
                 <a href="tel:+447540959387" class="h5 mt-3"><i class="fas fa-phone me-2"></i>07540 959387</a>
                 <br>
@@ -119,7 +120,7 @@
         <div class="row align-items-center h-100">
           <div class="col-12">
             <p class="bio-text">
-              <span class="float-end col-md-4 text-center">
+              <span class="float-end col col-xs-12 col-sm-4 col-lg-12 text-center pb-5">
                 <img src="/static/images/laura_morgan_dog_trainer.jpeg" alt="Laura dog behavioural training" class="bio-image mb-5">
                 <a href="tel:+447412667890" class="h5 mt-3"><i class="fas fa-phone me-2"></i>07412 667890</a>
                 <br>
